--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<title>Collaborative Scheduler</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="./favicon.ico">
 		<script src="/socket.io/socket.io.js"></script>
 
 	</head>
