--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
         });
 
          socket.on('give data', function(dataInfo) {
-            console.log(dataInfo)
+            console.log(dataInfo);
         });
 
        });
