--- a/public/index.html
+++ b/public/index.html
@@ -188,41 +188,15 @@
             console.log(dataInfo)
             document.getElementById('queryInfo').style.display = "none";
 
+            
+
             for (let pair of dataInfo.data) {
-
-                console.log("\n----\n s1");
-                for (let schedule of pair.s1) {
-                    let Marray = [];
-                    let Tuarray = [];
-                    let Warray = [];
-                    let Tharray = [];
-                    let Farray = [];
-
-                    for (let time of schedule.times) {
-                        if (time.days == 'M'){
-                            Marray.push(time);
-                        }
-                        else if (time.days == 'Tu') {
-                            Tuarray.push(time);
-                        }
-                        else if (time.days == 'W') {
-                            Warray.push(time);
-                        }
-                        else if (time.days == 'Th') {
-                            Tharray.push(time);
-                        }
-                        else if (time.days == 'F') {
-                            Farray.push(time);
-                        }
-                    }
-                }
-
-
-                let table = document.createElement('table');
+                
+                let table1 = document.createElement('table');
                 let headerRow = document.createElement('tr');
                 let d = document.createElement('caption')
-                d.innerHTML = "Left Student"
-                table.appendChild(d);
+                d.innerHTML = "Right Student"
+                table1.appendChild(d);
 
                 d = document.createElement('th')
                 d.innerHTML = "Section"
@@ -242,7 +216,87 @@
                 d = document.createElement('th')
                 d.innerHTML = "F"
                 headerRow.appendChild(d);
-                table.appendChild(headerRow);
+                table1.appendChild(headerRow);
+
+                console.log("\n----\n s1");
+                for (let section of pair.s1) {
+                    let row = document.createElement('tr');
+                    let Marray = [];
+                    let Tuarray = [];
+                    let Warray = [];
+                    let Tharray = [];
+                    let Farray = [];
+
+                    data = document.createElement('td');
+                    data.innerHTML = section.section;
+                    row.appendChild(data);
+                    for (let time of section.times) {
+                        if (time.days == 'M'){
+                            Marray.push(time.start + " - " + time.end);
+                        }
+                        else if (time.days == 'Tu') {
+                            Tuarray.push(time.start + " - " + time.end);
+                        }
+                        else if (time.days == 'W') {
+                            Warray.push(time.start + " - " + time.end);
+                        }
+                        else if (time.days == 'Th') {
+                            Tharray.push(time.start + " - " + time.end);
+                        }
+                        else if (time.days == 'F') {
+                            Farray.push(time.start + " - " + time.end);
+                        }
+                    }
+
+                    data = document.createElement('td');
+                    data.innerHTML = Marray.toString().replace(',', "<br />");
+                    row.appendChild(data);
+
+                    data = document.createElement('td');
+                    data.innerHTML = Tuarray.toString().replace(',', "<br />");
+                    row.appendChild(data);
+
+                    data = document.createElement('td');
+                    data.innerHTML = Warray.toString().replace(',', "<br />");
+                    row.appendChild(data);
+
+                    data = document.createElement('td');
+                    data.innerHTML = Tharray.toString().replace(',', "<br />");
+                    row.appendChild(data);
+
+                    data = document.createElement('td');
+                    data.innerHTML = Farray.toString().replace(',', "<br />");
+                    row.appendChild(data);
+
+                    table1.appendChild(row);
+                }
+
+
+                let table2 = document.createElement('table');
+                headerRow = document.createElement('tr');
+                d = document.createElement('caption')
+                d.innerHTML = "Left Student"
+                table2.appendChild(d);
+
+                d = document.createElement('th')
+                d.innerHTML = "Section"
+                headerRow.appendChild(d);
+                d = document.createElement('th')
+                d.innerHTML = "M"
+                headerRow.appendChild(d);
+                d = document.createElement('th')
+                d.innerHTML = "Tu"
+                headerRow.appendChild(d);
+                d = document.createElement('th')
+                d.innerHTML = "W"
+                headerRow.appendChild(d);
+                d = document.createElement('th')
+                d.innerHTML = "Th"
+                headerRow.appendChild(d);
+                d = document.createElement('th')
+                d.innerHTML = "F"
+                headerRow.appendChild(d);
+                table2.appendChild(headerRow);
 
                 console.log("---- s2");
                 for (let section of pair.s2) {
@@ -294,10 +348,11 @@
                     data.innerHTML = Farray.toString().replace(',', "<br />");
                     row.appendChild(data);
 
-                    table.appendChild(row);
+                    table2.appendChild(row);
                 }
 
-                document.getElementById('scheduleInfo').appendChild(table);
+                document.getElementById('scheduleInfo').appendChild(table1);
+                document.getElementById('scheduleInfo').appendChild(table2);
             }
         });
 
