last minute cramming

--- a/public/index.html
+++ b/public/index.html
@@ -212,7 +212,7 @@
                 // regular case
                 let centerIt = document.createElement('center');
                 let noDataDiv = document.createElement('div');
-                noDataDiv.style.color = 'purple';
+                noDataDiv.style.color = 'DarkGreen';
                 noDataDiv.innerHTML = "Max number of classes togeter is: <b>" + dataInfo.max + "</b>";
                 centerIt.appendChild(noDataDiv);
                 document.getElementById('scheduleInfo').appendChild(centerIt);
